2018-09-29 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/structassign.c:
	  Use exactly representable values in union assignment test.
	* src/SDCClospre.cc:
	  Prepare for use of different container types.
	* src/SDCCtree_dec.hpp:
	  Cleanup.

2018-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* Merge next branch.

2018-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCtree_dec.hpp:
	  Cherry-pick a minor performance improvement from lospre-vs-mcpre branch.

2018-09-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCtree_dec.hpp,
	  src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Remove hard dependencies on std::set to allow future transition to other containers.

2018-09-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  support/valdiag/tests/struct.c,
	  support/valdiag/tests/structflexiblearray.c:
	  Fix bugs #2774, 2775.

2018-09-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,
	  src/SDCCralloc.hpp:
	  Speed and memory usage improvements for tree-decomposition based algorithms.

2018-09-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-r2k.def,
	  src/z80/peeph-tlcs90.def,
	  src/z80/peeph-z80.def:
	  Fix bug #2814.

2018-09-19 Philipp Klaus Krause <pkk AT spth.de>

	* support/scripts/repack_release.sh:
	  Update script for 3.8.0 release.

2018-09-18 Philipp Klaus Krause <pkk AT spth.de>

	* doc/README.txt:
	  List TLCS-90 as supported target.
	* src/z80/peeph-z80.def,
	  src/z80/peeph-r2k.def:
	  Minor z80 peephole improvement.

2018-09-16 Philipp Klaus Krause <pkk AT spth.de>

	* .version,
	  doc/INSTALL.txt,
	  sdcc.spec:
	  Bump version number preparing for 3.8.0 release.

2018-09-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c,
	  support/regression/tests/smallc.c,
	  support/regression/tests/bug-2590.c,
	  support/regression/tests/z88dk.c:
	  Disable __smallc for stm8.
