@@ -1,3 +1,8 @@
+2018-10-01 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* src/SDCCopt.c:
+	  Port an operand narrowing optimization to UNARYMINUS.
+
 2018-09-29 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/structassign.c:
